--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "dom2canvas": "^1.0.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "next-intl": "^3.25.2",
