fix：修复构建问题

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "critters": "^0.0.25",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
     "html2canvas": "^1.4.1",
