--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/pdfmake": "^0.2.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "critters": "^0.0.25",
@@ -46,6 +47,7 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
+    "pdfmake": "^0.2.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
